--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
 
 	, "repository"   : {
 		"type" : "git"
-		"url"  : "https://github.com/ronnyhaase/savage.git"
+		, "url"  : "https://github.com/ronnyhaase/savage.git"
 	}
 	, "dependencies" : {
 		"nopt"     : "2.1.1"
-		"hogan.js" : "latest"
+		, "hogan.js" : "latest"
 	}
 	, "devDependencies" : {
 	}
