--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	, "keywords"     : ["cli", "template", "mustache", "handlebars", "hogan"]
 	, "version"      : "0.1.0"
 
+	, "main"         : "./index.js"
 	, "repository"   : {
 		"type" : "git"
 		, "url"  : "https://github.com/ronnyhaase/savage.git"
@@ -17,10 +18,9 @@
 	, "devDependencies" : {
 	}
 	, "engines" : {
-		"node" : ">=0.1"
+		"node" : "*"
 	}
 
 	, "bin"          : { "savage" : "./bin/savage" }
-	, "main"         : "./lib/savage"
 	, "preferGlobal" : true
 }
